--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,5 @@ MYSQL_PASSWORD=test1234
 API_VERSION=1.0
 
 DATABASE_URL="mysql://root:root@scraper.mysql:3306/scraper"
+OPENAI_API_KEY=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
+ORGANIZATION_ID=Personal
