--- a/server/.env.example
+++ b/server/.env.example
@@ -4,12 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=scraper
-MYSQL_USER=scraper
-MYSQL_PASSWORD=test1234
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
 API_VERSION=1.0
 
 DATABASE_URL="mysql://root:root@scraper.mysql:3306/scraper"
-OPENAI_API_KEY=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
-ORGANIZATION_ID=Personal
+OPENAI_API_KEY=
+ORGANIZATION_ID=
