--- a/client/.env
+++ b/client/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-CORE_API_URL=http://127.0.0.1:3018
+VITE_CORE_API_URL=http://127.0.0.1:3018
